================================ Next release ================================

Bug fixes:
    - ``p.util.Cancellable.disown_cancellable_parent_callback`` now correctly
      passes the return value through.

========================== Release 0.5.0 2012-09-23 ==========================

Features:
    - Plugin-loaded services: ``IPipedService``-plugins, with a helper
      ``PipedService``-base class in ``piped.service``. If the service uses
      dependencies from other providers, consider using
      ``DependencyPipedService``.

Internal changes:
    - ``piped.util.wait(..)`` is now cancellable.
    - ``DependencyManager.add_dependency(foo)`` now returns ``foo`` as a
     dependency after binding it to the dependency graph instead of returning
     ``None``.

    - The database contrib has been reworked. By just providing
      SQLAlchemy engines instead of MetaData, it's a lot simpler. The
      API is still unstable, though.

    - A PostgresListener-service makes working with asynchronous
      notifications from a Postgres database a lot simpler. It also
      has utilities for watching transaction snapshot threshold, which
      is useful when implementing certain syncing strategies.

Backward-incompatible changes:

    - The database-contrib now provides and manages SQLAlchemy
      engines, instead of ``MetaData``.

Bug fixes:
    - The ZooKeeper provider could sometimes fail connecting while still
     providing the client.
    - ``piped.util.wait_for_first`` will now errback with the actual failure,
     and not a ``FirstError``.
    - ``piped.graph`` is now compatible with ``networkx`` 1.7


========================== Release 0.4.7 2012-08-09 ==========================

Features:
    - The ZooKeeper contrib now uses a configurable ``connect_timeout`` and a
      configurable ``reconnect_timeout``, which is used when connecting and
      reconnecting, respectively.

    - Added a setting ``force_blocking_stdout`` to the REPL provider, which